package com.design.structure.adapter;

/**
 * @Title: Translator
 * @Description: 翻译功能定义
 * @Author: yj
 * @Date: 2023/5/20 09:08
 * @Version: 1.0
 */
public interface Translator {

	void translate(String content);
}
